--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-web-infans",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "A yeoman generator that will help you bootstrap your webapp with gulp.",
   "files": [
     "app",
     "router"
@@ -16,7 +16,9 @@
     "starters"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.19.1"
+    "wiredep": "^2.2.2",
+    "yeoman-generator": "^0.19.1",
+    "yosay": "^1.0.3"
   },
   "peerDependencies": {
     "yo": ">=1.0.0",
@@ -33,7 +35,6 @@
   },
   "homepage": "https://github.com/chrisvanmook/generator-web-infans",
   "scripts": {
-    "test": "gulp build",
-    "postinstall": "node_modules/.bin/bower install"
+    "test": ""
   }
 }
