--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
+sudo: false
 language: node_js
 node_js:
   - "0.12"
   - "0.10"
 notifications:
   email: false
+branches:
+  only:
+    - master
+    - develop
