--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "<%= appName %>",
+  <% if (appDesc) { %>"description": "<%= appDesc %>",<% } %>
   "version": "0.0.0",
   "authors": [
-    "Chris van Mook <chrisvanmook@gmail.com>"
+    "<%= appAuthor %>"
   ],
-  "license": "MIT",
+  "license": "<%= appLicense %>",
   "private": false,
   "ignore": [
     "**/.*",
@@ -14,11 +15,11 @@
     "tests"
   ],
   "dependencies": {
-    <% if (useModernizr) { %>"modernizr": "~2.8.3"<% } %><% if (usejQuery) { %>,
-    "jquery": "~2.1.3" <% } %><% if (useHTML5Shiv) { %>,
-    "html5shiv": "~3.7.2" <% } %><% if (useRespondJS) { %>,
+    <% if (useModernizr) { %>"modernizr": "~2.8.3"<% } %><% if (usejQuery) { %><% if (useModernizr && usejQuery) { %>, <% } %>
+    "jquery": "~2.1.3"<% } %><% if (useHTML5Shiv) { %>,
+    "html5shiv": "~3.7.2"<% } %><% if (useRespondJS) { %>,
     "respond": "~1.4.2"<% } %><% if (useFastClick) { %>,
-    "fastclick": "~1.0.6" <% } %>
+    "fastclick": "~1.0.6"<% } %>
 
   }
 }
