Add coveralls to package.json

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test": "mocha --reporter spec --no-timeouts"
   },
   "devDependencies": {
+    "coveralls": "^2.11.2",
     "mocha": "^2.2.4"
   }
 }
