Untrack coverage folder

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "homepage": "https://github.com/chrisvanmook/generator-web-initium",
   "scripts": {
     "test": "mocha --reporter spec --no-timeouts && npm run coverage",
-    "coverage": "./node_modules/.bin/istanbul cover -x 'test/**' --include-all-sources ./node_modules/mocha/bin/_mocha -- --reporter dot"
+    "coverage": "./node_modules/.bin/istanbul cover -x 'test/**' ./node_modules/mocha/bin/_mocha -- --reporter dot"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
